# tiny-proxy

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  clippy.toml  config.conf  deny.toml  docker-compose.yml  file.caddy
.cargo/: audit.toml  deny.toml
.github/workflows/: ci.yml  docker.yml  pr-check.yml  release.yml
benches/: proxy_bench.rs
benchmarks/: compose.yml  run.sh
benchmarks/proxies/: Caddyfile  nginx.conf  tiny-proxy.conf
examples/: background.rs  basic.rs  example.caddy  hot_reload.rs  metrics.caddy  simple.caddy  tls.conf  tls.rs
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  proxy.rs
src/api/: endpoints.rs  middleware.rs  mod.rs  server.rs
src/auth/: headers.rs  mod.rs  validator.rs
src/cli/: args.rs
src/config/: address.rs  mod.rs  models.rs  parser.rs
src/metrics/: mod.rs  recorder.rs  server.rs
src/proxy/: access_log.rs  directives.rs  handler.rs  mod.rs  proxy.rs  server.rs  tls.rs  types.rs
tests/: LOAD_TESTING.md  header_up_integration.rs  hot_reload_integration.rs  load-test.js  metrics_integration.rs  tls_integration.rs
tests/common/: mock_server.rs  mod.rs
tests/config/: parser_test.rs
tests/proxy/: handler_test.rs
