[package]
name = "tiny-proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "tiny_proxy"
path = "src/lib.rs"

[[bin]]
name = "tiny-proxy"
path = "src/main.rs"

[dependencies]
hyper = { version = "1.3", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0.18"
bytes = "1.0"

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
hyper-tls = "0.6"
tracing = "0.1"
clap = { version = "4.5", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "proxy_bench"
harness = false

[features]
default = ["cli"]
cli = ["dep:clap", "dep:tracing-subscriber"]

api = ["dep:serde", "dep:serde_json"]
full = ["cli", "api"]
